# barista-buddy

./: .gitignore  CMakeLists.txt  README.md  barista-buddy.ino  controller.hpp  display.hpp  frontend.hpp  measurement.hpp  module.hpp  relay.hpp  sensor.hpp
.github/workflows/: default.yaml
doc/: arduino-cli.md  motivation.md
src/controller/: README.md  controllerImpl.cpp  controllerImpl.hpp
src/display/: README.md  displayImpl.cpp  displayImpl.hpp
src/frontend/: frontendImpl.cpp  frontendImpl.hpp
src/measurement/: README.md  measurementImpl.cpp  measurementImpl.hpp
src/relay/: README.md  relayImpl.cpp  relayImpl.hpp
src/sensor/: README.md  sensorImpl.cpp  sensorImpl.hpp
tests/: CMakeLists.txt  test-frontend.cpp  test-relay.cpp  test-sensor.cpp
tests/stubs/: Arduino.h  ArduinoStub.cpp  DallasTemperature.h  LedControl.h  OneWire.h
